infrastructure/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mbd
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: mbd-infra
  labels:
    istio-injection: enabled
